# Netconf1

./: CMakeLists.txt  CMakeLists_netconf.txt  Makefile  README.md  README_O1_NETCONF.md  README_SIMPLE.md  steps.txt  test2  time
config/: o1-interface.yang  ssh_config  tracing.yang
scripts/: install_netconf_compatible.sh  setup.sh
src/: client.c  common.c  common.h  o1_netconf_client.c  o1_netconf_server.c  server.c  simple_client.c  simple_server.c
